--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,10 @@ html {
   box-sizing: border-box;
 }
 *,
-*::after,
+*::after{
+  content: '';
+}
+
 *::before {
   box-sizing: inherit;
 }
@@ -239,7 +242,7 @@ address {
   height: 56px;
   border-radius: 4px;
   cursor: pointer;
-  transition: background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
