--- a/css/styles.css
+++ b/css/styles.css
@@ -158,7 +158,7 @@ ul {
   display: flex;
   font-style: normal;
   gap: 40px;
-  transition: color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link {
