--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,7 @@ ul {
   padding: 24px 0;
   position: relative;
   color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-box {
