--- a/css/styles.css
+++ b/css/styles.css
@@ -244,7 +244,7 @@ address {
   height: 56px;
   border-radius: 4px;
   cursor: pointer;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
