--- a/css/styles.css
+++ b/css/styles.css
@@ -397,6 +397,18 @@ width: calc((100% - 72px) / 4);
   text-align: center;
 }
 
+.icon-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  margin-bottom: 8px;
+  
+}
+
 /* Footer Section */
 
 .footer {
