--- a/css/styles.css
+++ b/css/styles.css
@@ -337,6 +337,11 @@ width: calc((100% - 72px) / 4);
   letter-spacing: 0.02em;
   color: var(--slate);
 }
+.icon-list {
+  display:flex;
+  justify-content: center;
+  gap: 24px;
+}
 
 /* Section 4 */
 
@@ -406,7 +411,7 @@ width: calc((100% - 72px) / 4);
   border-radius: 4px;
   border: 1px solid #8e8f99;
   margin-bottom: 8px;
-  
+
 }
 
 /* Footer Section */
