--- a/css/styles.css
+++ b/css/styles.css
@@ -338,10 +338,23 @@ width: calc((100% - 72px) / 4);
   color: var(--slate);
 }
 
-.social{
+.social-list{
   display: flex;
   justify-content: center;
   gap: 24px;
+}
+
+.social{
+
+}
+.icon-link {
+width: 100%;
+height: 100%;
+background-color: #4d5ae5;
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
 }
 
 /* Section 4 */
