--- a/css/styles.css
+++ b/css/styles.css
@@ -344,9 +344,6 @@ width: calc((100% - 72px) / 4);
   gap: 24px;
 }
 
-.social{
-
-}
 .icon-link {
 width: 100%;
 height: 100%;
@@ -355,6 +352,14 @@ border-radius: 50%;
 display: flex;
 align-items: center;
 justify-content: center;
+}
+.icon-link:hover,
+.icon-link:focus {
+  background-color: #404bbf;
+}
+
+.icon-icon {
+fill: #f4f4fd;
 }
 
 /* Section 4 */
