--- a/css/styles.css
+++ b/css/styles.css
@@ -353,9 +353,11 @@ display: flex;
 align-items: center;
 justify-content: center;
 }
-.icon-link:hover,
+.icon-link:hover{
+background-color: #404bbf;
+}
 .icon-link:focus {
-  background-color: #404bbf;
+background-color: #404bbf;
 }
 
 .icon-icon {
