--- a/css/styles.css
+++ b/css/styles.css
@@ -342,6 +342,7 @@ width: calc((100% - 72px) / 4);
   display: flex;
   justify-content: center;
   gap: 24px;
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-link {
