--- a/css/styles.css
+++ b/css/styles.css
@@ -342,9 +342,8 @@ width: calc((100% - 72px) / 4);
   display: flex;
   justify-content: center;
   gap: 24px;
-  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .icon-link {
 width: 100%;
 height: 100%;
