--- a/css/styles.css
+++ b/css/styles.css
@@ -357,8 +357,8 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .icon-link:hover{
 background-color: #404bbf;
 }
-.icon-link:focus {
-background-color: #404bbf;
+.icon-link:focus{
+  background-color: #404bbf;
 }
 
 .icon-icon {
@@ -389,8 +389,11 @@ fill: #f4f4fd;
     column-gap: 24px;
     flex-wrap: wrap;
 }
-
+.list-container:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 .list-container-width {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   flex-basis: calc((100 - 2 * 24px) / 3);
 }
 
@@ -435,6 +438,7 @@ fill: #f4f4fd;
   margin-bottom: 8px;
 
 }
+
 
 /* Footer Section */
 
