--- a/css/styles.css
+++ b/css/styles.css
@@ -389,7 +389,7 @@ fill: #f4f4fd;
     column-gap: 24px;
     flex-wrap: wrap;
 }
-.list-container:hover {
+.list-container-width:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .list-container-width {
