--- a/css/styles.css
+++ b/css/styles.css
@@ -395,6 +395,10 @@ fill: #f4f4fd;
   flex-basis: calc((100 - 2 * 24px) / 3);
 }
 
+.list-container-width:hover{
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .div-box {
   padding: 32px 16px;
   border: 1px solid var(--cornflower);
