--- a/css/styles.css
+++ b/css/styles.css
@@ -397,6 +397,7 @@ fill: #f4f4fd;
 
 .list-container-width:hover{
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0%);
 }
 
 .div-box {
@@ -439,6 +440,11 @@ fill: #f4f4fd;
   border: 1px solid #8e8f99;
   margin-bottom: 8px;
 
+}
+
+.img-list {
+  position: relative;
+  overflow: hidden;
 }
 
 
