--- a/css/styles.css
+++ b/css/styles.css
@@ -201,6 +201,17 @@ address {
   color: var(--ocean);
 }
 
+.after-nav::after {
+  /* width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
+  */
+}
+
 /* Section 1 */
 
 .hero {
