--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ html {
 *,
 *::after{
   content: '';
+  
 }
 
 *::before {
@@ -201,15 +202,19 @@ address {
   color: var(--ocean);
 }
 
+
+
 .after-nav::after {
-  /* width: 100%;
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  height: 4px;
-  background-color: #404bbf;
-  border-radius: 2px;
-  */
+      content: "";
+      width: 100%;
+      position: absolute;
+      left: 0;
+      bottom: -1px;
+      height: 4px;
+      background-color: #404bbf;
+      border-radius: 2px;
+      
+
 }
 
 /* Section 1 */
