--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ html {
 }
 *,
 *::after{
-  content: '';
+  content: "";
   
 }
 
@@ -205,16 +205,14 @@ address {
 
 
 .after-nav::after {
-      content: "";
-      width: 100%;
-      position: absolute;
-      left: 0;
-      bottom: -1px;
-      height: 4px;
-      background-color: #404bbf;
-      border-radius: 2px;
-      
-
+ content: "";
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
 }
 
 /* Section 1 */
@@ -372,11 +370,8 @@ align-items: center;
 justify-content: center;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.icon-link:hover{
+.icon-link:hover,.icon-link:focus{
 background-color: #404bbf;
-}
-.icon-link:focus{
-  background-color: #404bbf;
 }
 
 .icon-icon {
@@ -409,8 +404,8 @@ fill: #f4f4fd;
 }
 
 .list-container-width {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   flex-basis: calc((100 - 2 * 24px) / 3);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list-container-width:hover{
