--- a/css/styles.css
+++ b/css/styles.css
@@ -370,7 +370,7 @@ align-items: center;
 justify-content: center;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social:hover,.social:focus{
+.icon-link:hover,.icon-link:focus{
 background-color: #404bbf;
 }
 
@@ -479,6 +479,10 @@ fill: #f4f4fd;
 
 /* Footer Section */
 
+.social-footer-link:hover,.social-footer-link:focus {
+  background-color: #31d0aa;
+}
+
 .footer {
   padding: 100px 0;
   background-color: var(--navy-blue);
@@ -520,4 +524,41 @@ fill: #f4f4fd;
 .container {
 display: flex;
 align-items: baseline;
+}
+
+.social-footer {
+  margin-right: 120px;
+
+}
+
+.social-p {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #FFFFFF;
+  margin-bottom: 16px;
+
+}
+
+.social-ul {
+  display: flex;
+  gap: 16px;
+}
+
+.social-footer-list {
+  width: 40px;
+  height: 40px;
+
+}
+
+.social-footer-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
