--- a/css/styles.css
+++ b/css/styles.css
@@ -560,4 +560,9 @@ align-items: baseline;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-social {
+  fill: #f4f4fd;
 }
