--- a/css/styles.css
+++ b/css/styles.css
@@ -293,8 +293,9 @@ address {
 }
 
 .button:hover,
-.button:focus {
-  background-color: var(--ocean);
+.button:focus,
+button:active {
+  background-color: #404bbf;
 }
 
 /* Section 2 */
@@ -344,24 +345,27 @@ width: calc((100% - 72px) / 4);
   text-align: center;
 }
 
-.team-box-width {
+.team-box-width .team-box{
   width: calc((100% - 72px) / 4);
 }
 
 .list-box {
   display: flex;
   gap: 24px;
+  margin-bottom: 120px;
 }
 
 .team-title {
-  font-weight: 700;
-  margin-bottom: 72px;
+font-family: "Roboto";
   font-size: 36px;
+  font-weight: 700;
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
+  color: #2e2f42;
   text-align: center;
-  color: var(--navy-blue);
+  margin-bottom: 72px;
+  margin-top: 120px;
 }
 
 .team-list-name {
@@ -383,6 +387,11 @@ width: calc((100% - 72px) / 4);
   color: var(--slate);
 }
 
+.social {
+  width: 40px;
+  height: 40px;
+}
+
 .social-list{
   display: flex;
   justify-content: center;
@@ -398,7 +407,10 @@ display: flex;
 align-items: center;
 justify-content: center;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .icon-link:hover,.icon-link:focus{
 background-color: #404bbf;
 }
