--- a/css/styles.css
+++ b/css/styles.css
@@ -445,13 +445,20 @@ fill: #f4f4fd;
 }
 
 .list-container-width {
-  flex-basis: calc((100 - 2 * 24px) / 3);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+width: calc((100% - 48px) / 3);
+  /* row-gap: 40px; */
+  position: relative;
+  width: 360px;
+  height: 420px;
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.list-container-width:hover{
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  transform: translateY(0%);
+.list-container-width:hover .p-hiden{
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    transform: translateY(0%);
 }
 
 .div-box {
