--- a/css/styles.css
+++ b/css/styles.css
@@ -422,6 +422,7 @@ fill: #f4f4fd;
 /* Section 4 */
 
 .portfolio-title {
+  font-family: "Roboto";
   font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
@@ -433,15 +434,26 @@ fill: #f4f4fd;
 }
 
 .section-four-container {
-  padding: 120px 0;
+  padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.section-four-container .title-div {
+  margin-left: 156px;
+    margin-right: 156px;
+    margin-top: 120px;
+    margin-bottom: 120px;
 }
 
 .list-container {
   display: flex;
-    flex-shrink: 0;
-    row-gap: 48px;
-    column-gap: 24px;
+    flex-direction: row;
+    justify-items: center;
     flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+    width: 1128px;
+    height: 1000px;
 }
 
 .list-container-width {
@@ -454,7 +466,18 @@ width: calc((100% - 48px) / 3);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+.list-container-width img{
+  width: 100%;
+    height: 100%;
+    gap: 0px;
+    opacity: 0px;
+    object-fit: cover;
+}
 
+.list-container-width:hover{
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 .list-container-width:hover .p-hiden{
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
       0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -465,14 +488,22 @@ width: calc((100% - 48px) / 3);
   padding: 32px 16px;
   border: 1px solid var(--cornflower);
   border-top: none;
+  margin-bottom: 8px;
 }
 
-.portfolio-list-title {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: var(--navy-blue);
+.list-container h3{
+  font-family: "Roboto";
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+.list-container p {
+  font-family: "Roboto";
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 
 .portfolio-list-description {
@@ -491,17 +522,7 @@ width: calc((100% - 48px) / 3);
   text-align: center;
 }
 
-.icon-container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 112px;
-  background-color: #f4f4fd;
-  border-radius: 4px;
-  border: 1px solid #8e8f99;
-  margin-bottom: 8px;
 
-}
 
 .img-list {
   position: relative;
@@ -520,7 +541,9 @@ width: calc((100% - 48px) / 3);
   height: 100%;
   width: 100%;
   transform: translateY(100%);
-  transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: transform;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
