--- a/css/styles.css
+++ b/css/styles.css
@@ -555,7 +555,8 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
 
 /* Footer Section */
 
-.social-footer-link:hover,.social-footer-link:focus {
+.social-footer-link:hover,
+.social-footer-link:focus {
   background-color: #31d0aa;
 }
 
