--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,12 @@ html {
   box-sizing: inherit;
 }
 
+.ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 img {
   display: block;
   max-width: 100%;
