--- a/css/styles.css
+++ b/css/styles.css
@@ -1,92 +1,9 @@
-/* Style reset */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0;
-}
-html {
-  box-sizing: border-box;
-}
-*,
-*::after,
-*::before {
-  box-sizing: inherit;
-}
-
-.ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-address {
-  font-style: normal;
-}
-.link {
-  text-decoration: none;
-  color: inherit;
-}
-.list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-/* Non style reset */
-
-:root {
-  --iris: #4d5ae5;
-  --ocean: #404bbf;
-  --navy-blue: #2e2f42;
-  --green: #31d0aa;
-  --slate: #434455;
-  --light-slate: #8e8f99;
-  --cornflower: #e7e9fc;
-  --cloud: #f4f4fd;
-  --navy-blue-modal: rgba(46, 47, 66, 0.4);
-  --grey: rgba(46, 47, 66, 0.7);
-  --white: #fff;
-  --dairy: #fcfcfc;
-  --font-family: "Roboto", sans-serif;
-  --second-family: "Raleway", sans-serif;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-}
-
-p {
-  margin: 0;
-}
-
-ul {
-  margin: 0;
-  list-style-type: none;
-  padding: 0;
-}
-
-img {
-  display: block;
-}
-
 body {
   font-family: "Roboto", sans-serif;
-    color: #434455;
-    background-color: #ffffff;
+  color: #434455;
+  background-color: #fff;
+  line-height: 24px;
+  font-size: 16px;
 }
 
 a {
@@ -94,237 +11,33 @@ a {
 }
 
 ul {
-  list-style-type: none;
+  list-style: none;
 }
 
-.container {
-  display: flex;
-}
-
-.section {
-  margin: 120px 0 120px 0;
-}
-
-/* Header Section */
-
-
-
-.header-box {
-  border-bottom: 1px solid #e7e9fc;
-  box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-}
-
-.header-container {
-  display: flex;
-  margin: 0 auto;
-  padding: 0 15px;
-}
-
-.container {
-  width: 1158px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
-
-.header-nav {
-  display: flex;
-  align-items: center;
-}
-
-.logo {
-  font-family: "Raleway", sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    color: #4d5ae5;
-    text-transform: uppercase;
-    margin-right: 76px;
-}
-
-.link-menu {
-  display: flex;
-  gap: 40px;
-}
-
-/* .nav-menu:hover {
-  color: #404bbf;
-} */
-
-.header-nav{
-  margin-right: 332px;
-}
-.header-box {
-  border-bottom: 1px solid #e7e9fc;
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-}
-
-.header-box .header-nav > ul .menu-items > a {
-  color: #2e2f42;
-}
-
-.header-nav .link {
-  display: flex;
-    text-decoration: none;
-    font-family: "Roboto";
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    padding: 24px 0;
-    position: relative;
-  }
-
-.header-box .header-nav .link.hero-one {
-  position: relative;
-    color: #404bbf;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.address-list .header-box{
-  display: flex;
-  font-style: normal;
-  gap: 40px;
-}
-
-.header-link {
-  margin: auto;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--navy-blue);
-}
-
-.header-box .header-nav .link.hero-one:hover,
-.header-box .header-nav .link.hero-one:focus {
-    color: #404bbf;
-    text-decoration: underline;
-}
-
-.link::after{
-  content: "";
-    /* text-decoration: underline; */
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    height: 4px;
-    background-color: #404bbf;
-    border-radius: 2px;
-}
-
-.header-nav .link:active{
-  color: #404bbf;
-}
-
-address {
-  font-style: normal;
-  display: flex;
-  gap: 40px;
-}
-
-.address-list .address-contact {
-  font-family: "Roboto";
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-  
-    position: relative;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.address-contact .address-list:hover,
-.address-contact .address-list:focus {
-  color: #404bbf;
-}
-
-.header-box{
-  background-color: #e7e9fc;
-}
-
-
-
-/* Section 1 */
-
-.hero {
-  justify-content: center;
-  margin: auto;
-  width: 1440px;
-  height: 600px;
-  top: 72px;
-  background-color: var(--navy-blue);
-  padding: 188px 0;
-  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/desk-people.jpg);
-  max-width: 1440px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.hero-title-box {
-  max-width: 496px;
-}
-
-.hero-title {
-  max-width: 496px;
-  font-size: 56px;
-  line-height: 1.07;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: var(--white);
-}
-
-.button {
-  border: none;
+img {
   display: block;
-  cursor: pointer;
-  font-family: var(--font-family);
-  background-color: var(--iris);
-  font-size: 16px;
-  letter-spacing: 0.04em;
-  font-weight: 500;
-  line-height: 1.5;
-  color: var(--white);
-  min-width: 169px;
-  height: 56px;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button:hover,
-.button:focus,
-button:active {
-  background-color: #404bbf;
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
 }
 
-/* Section 2 */
-
-
-.benefits-page{
-  padding: 120px 0;
+ul {
+  margin: 0;
+  padding-left: 0;
 }
 
-.benefits-list {
-  display: flex;
-    gap: 24px;
+.container {
+  max-width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
 }
 
-.benefits-list-item {
-width: calc((100% - 72px) / 4);
-}
-
-.title-benefits {
-  margin-bottom: 8px;
-}
-
-.our-company-title-hidden {
+.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -335,317 +48,438 @@ width: calc((100% - 72px) / 4);
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
-  
 }
-.icon-container {
+
+/* .nav-menu:hover {
+  color: #404bbf;
+} */
+
+/*header*/
+
+.logo-header {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  padding: 24px 0;
+}
+
+.header {
+  border-bottom: 1px solid #e7e9fc;
+  box-shadow: 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.header .container {
   display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 112px;
-    background-color: #f4f4fd;
-    border-radius: 4px;
-    border: 1px solid #8e8f99;
-    margin-bottom: 8px;
+  justify-content: space-between;
 }
 
-/* Section 3 */
-
-.team-container {
-  padding: 120px 0;
-  background-color: var(--cloud);
+.header-navigation {
+  display: flex;
+  align-items: center;
 }
 
-.team-box {
-  background-color: var(--white);
-  border-radius: 0 0 4px 4px;
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+.header-navigation .logo-header {
+  margin-right: 76px;
+}
+
+.logo-hader-part {
+  color: #2e2f42;
+}
+
+.contacts-us {
+  font-style: normal align-items: flex-end;
+}
+
+.top-menu {
+  display: flex;
+  gap: 40px;
+}
+
+.contacts-us-menu {
+  display: flex;
+  gap: 40px;
+}
+
+.link {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  position: relative;
+  color: #2e2f42;
+  display: flex;
+  padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link:hover,
+.link:focus,
+.contacts-us .link:hover,
+.contacts-us .link:focus {
+  color: #404bbf;
+}
+
+.top-menu-item .link:hover::after {
+  content: "";
+  height: 4px;
+  width: 100%;
+  background-color: #404bbf;
+  border-radius: 2px;
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+}
+
+.contacts-us .link {
+  color: #434455;
+  font-weight: 400;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* section 1 */
+
+.orders {
+  background-color: #2e2f42;
+  background: linear-gradient(to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)),
+    url(../images/desk-people.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  box-shadow: inset blur 50% grey;
   text-align: center;
+  max-width: 1440px;
+  padding: 188px 0;
+  margin: auto;
 }
 
-.team-box-width .team-box{
+.orders-header {
+  color: #fff;
+  font-size: 56px;
+  font-weight: 700;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+  max-width: 496px;
+  margin: 0 auto 48px;
+}
+
+.orders-button {
+  margin: auto;
+  font-family: "Roboto", sans-serif;
+  background: #4d5ae5;
+  color: #fff;
+  cursor: pointer;
+  min-width: 169px;
+  display: block;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  padding: 16px 32px;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px 0px #00000026;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.orders-button:hover,
+.orders-button:focus {
+  background-color: #404bbf;
+  cursor: pointer;
+}
+
+/* section 2 */
+
+.concept {
+  padding: 120px 0;
+}
+
+.concept-list {
+  display: flex;
+  gap: 24px;
+}
+
+.concept-header {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.concept-item {
   width: calc((100% - 72px) / 4);
 }
 
-.list-box {
+.concept-icon-container {
+  background-color: #f4f4fd;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  margin-bottom: 8px;
   display: flex;
-  gap: 24px;
-  margin-bottom: 120px;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
 }
 
-.team-title {
-font-family: "Roboto";
+.concept-icon {
+  display: block;
+  margin: 24px auto;
+}
+
+.concept-item-header {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.concept-item-desc {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+/* section 3 */
+
+.team {
+  background-color: #f4f4fd;
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.team-list {
+  display: flex;
+}
+
+.team-item {
+  background-color: #ffffff;
+  width: calc((100% - 72px) / 4);
+  display: inline-block;
+  margin-right: 24px;
+  text-align: center;
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 2px 1px 0px #2e2f4214, 0px 1px 1px 0px #2e2f4229,
+    0px 1px 6px 0px #2e2f4214;
+}
+
+.team-item:last-child {
+  margin-right: 0;
+}
+
+.team-item-desc {
+  padding: 32px 0;
+}
+
+.team-item-header {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.team-header {
   font-size: 36px;
   font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  text-transform: capitalize;
+  color: #2e2f42;
+  margin-bottom: 72px;
+}
+
+.team-desc {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-align: center;
+}
+
+.social-links {
+  display: flex;
+  gap: 24px;
+  flex-shrink: 0;
+  justify-content: center;
+  align-self: flex-end;
+  margin-top: 8px;
+}
+
+.social-links .soc-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  color: #f4f4fd;
+  font-family: sans-serif;
+  letter-spacing: 0.02em;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-links .soc-link:hover,
+.social-links .soc-link:focus {
+  background-color: #404bbf;
+}
+
+.social-links .social-icon {
+  fill: #f4f4fd;
+}
+
+/*section 4*/
+
+.portfolio {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.portfolio-header {
+  font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: #2e2f42;
   text-align: center;
   margin-bottom: 72px;
-  margin-top: 120px;
 }
 
-.team-list-name {
-  text-align: center;
-  margin-bottom: 8px;
-}
-
-.team-position {
-  padding: 32px 0;
-  text-align: center;
-}
-
-.team-list-job {
-  font-weight: 400;
-  font-size: 16px;
-  text-align: center;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--slate);
-}
-
-.social {
-  width: 40px;
-  height: 40px;
-}
-
-.social-list{
+.portfolio-list {
   display: flex;
-  justify-content: center;
-  gap: 24px;
-  
-}
-.icon-link {
-width: 100%;
-height: 100%;
-background-color: #4d5ae5;
-border-radius: 50%;
-display: flex;
-align-items: center;
-justify-content: center;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  flex-wrap: wrap;
+  row-gap: 48px;
+  column-gap: 24px;
 }
 
-.icon-link:hover,.icon-link:focus{
-background-color: #404bbf;
-}
-
-.icon-icon {
-fill: #f4f4fd;
-}
-
-/* Section 4 */
-
-.portfolio-title {
-  font-family: "Roboto";
-  font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-align: center;
-    text-transform: capitalize;
-    color: var(--navy-blue);
-    margin-bottom: 72px;
-}
-
-.section-four-container {
-  padding-top: 120px;
-    padding-bottom: 120px;
-}
-
-.section-four-container .title-div {
-  margin-left: 156px;
-    margin-right: 156px;
-    margin-top: 120px;
-    margin-bottom: 120px;
-}
-
-.list-container {
-  display: flex;
-    flex-direction: row;
-    justify-items: center;
-    flex-wrap: wrap;
-    column-gap: 24px;
-    row-gap: 48px;
-    width: 1128px;
-    height: 1000px;
-}
-
-.list-container-width {
-width: calc((100% - 48px) / 3);
-  /* row-gap: 40px; */
-  position: relative;
-  width: 360px;
-  height: 420px;
-  transition-property: box-shadow;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.list-container-width img{
-  width: 100%;
-    height: 100%;
-    gap: 0px;
-    opacity: 0px;
-    object-fit: cover;
-}
- 
-.list-container-width:hover{
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-.list-container-width:hover .p-hiden{
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    transform: translateY(0%);
-}
-
-.div-box {
+.portfolio-item-desc {
   padding: 32px 16px;
-  border: 1px solid var(--cornflower);
+  border: 1px solid #e7e9fc;
   border-top: none;
-  margin-bottom: 8px;
 }
 
-.list-container h3{
-  font-family: "Roboto";
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-}
-.list-container p {
-  font-family: "Roboto";
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-list-description {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--slate);
+.portfolio-item-img {
+  max-width: 100%;
 }
 
-.item-title {
-  text-align: center;
-  margin-bottom: 8px;
-}
-
-.img-list {
+.portfolio-item-overlay {
   position: relative;
   overflow: hidden;
 }
 
-.p-hiden {
-  position: absolute;
-  top: 0;
+.portfolio-subtitle {
+  color: #2e2f42;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  margin-bottom: 8px;
+}
+
+.portfolio-item-text {
+  color: #434455;
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #f4f4fd;
-  padding: 40px 32px;
-  background-color: #4d5ae5;
-  height: 100%;
-  width: 100%;
-  transform: translateY(100%);
-  transition-property: transform;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
+  color: #434455;
 }
 
-
-/* Footer Section */
-
-.social-footer-link:hover,
-.social-footer-link:focus {
-  background-color: #31d0aa;
+.portfolio-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.footer {
-  padding: 100px 0;
-  background-color: var(--navy-blue);
-}
-.footer-section {
-  background-color: var(--navy-blue);
+.portfolio-item:hover .overlay {
+  transform: translateY(0);
+  cursor: pointer;
 }
 
-.footer-container {
-  width: 1440px;
-  height: 312px;
-  top: 2988px;
-  gap: 0px;
-  opacity: 0px;
-  margin: auto;
-}
+/*footer */
 
-.logo {
-  display: inline-block;
-  margin-bottom: 16px;
-}
-
-.footer-paragraph {
+.footer-desc {
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.02em;
-  color: var(--cloud);
   max-width: 264px;
 }
 
-.p-container {
-  max-width: 264px;
+body .footer-desc {
+  color: #f4f4fd;
 }
 
-.design-logo {
-  color: var(--cloud);
-}
-.container {
-display: flex;
-align-items: baseline;
+.footer {
+  background-color: #2e2f42;
+  padding: 100px 0 100px;
 }
 
-.social-footer {
-  margin-right: 120px;
-
-}
-
-.social-p {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #FFFFFF;
+.footer .container .logo-header {
+  display: inline-block;
   margin-bottom: 16px;
-
+  padding: 0;
 }
 
-.social-ul {
+.footer-soc-block-header {
+  color: #fff;
+  letter-spacing: 0.02em;
+  font-weight: 500;
+  margin-bottom: 16px;
+}
+
+.footer-text-block {
+  margin-right: 120px;
+}
+
+.footer .container {
   display: flex;
+  align-items: baseline;
+}
+
+.footer .social-links {
   gap: 16px;
 }
 
-.social-footer-list {
-  width: 40px;
-  height: 40px;
-
+.footer .social-links .soc-link:hover,
+.footer .social-links .soc-link:focus {
+  background-color: #31d0aa;
 }
 
-.social-footer-link {
-  width: 100%;
-  height: 100%;
-  background-color: #4d5ae5;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.logo-footer-part {
+  color: #f4f4fd;
 }
 
-.icon-social {
-  fill: #f4f4fd;
-}
+.soc-link-block {}
